[package]
name = "in-situ"
version = "0.4.0"
authors = ["Rouven Spreckels <n3vu0r@qu1x.org>"]
description = "In Situ Endian-independent Bytes Access"
documentation = "https://docs.rs/in-situ"
homepage = "https://qu1x.org/in-situ"
repository = "https://github.com/qu1x/in-situ"
readme = "README.md"
keywords = [
	"in-situ",
	"endian-independent",
	"bytes-access",
	"zero-copy",
	"parsing",
]
categories = [
	"data-structures",
	"encoding",
	"parsing",
]
license = "Fair"
include = [
	"src/lib.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
]

[badges]
travis-ci = { repository = "qu1x/in-situ" }

[dependencies]
byteorder = "1"
bytes = "0.5"
