[package]
name = "in-situ"
version = "0.6.0"
rust-version = "1.85.0"
edition = "2024"
description = "In Situ Endian-Independent Bytes Access"
documentation = "https://docs.rs/in-situ"
repository = "https://github.com/qu1x/in-situ"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MIT OR Apache-2.0"
keywords = [
	"in-situ",
	"endian-independent",
	"bytes-access",
	"zero-copy",
	"parsing",
]
categories = [
	"data-structures",
	"encoding",
	"parsing",
]
include = [
	"src/lib.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSE-*"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
byteorder = { version = "1", default-features = false }
bytes = { version = "1", default-features = false, optional = true }
bstr = { version = "1", default-features = false, optional = true }

[lints.rust]
missing-docs = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
